tests/fail/stable/invalid_custom_regex.stderr
error: unknown format option starting with 'g'.
       Use '/' for regex, '[' for custom format options, or 'b', 'o', 'x' or 'r' for number format options:
       At "{://g}"
               ^
 --> tests/fail/stable/invalid_custom_regex.rs:2:25
  |
2 |     sscanf::sscanf!("", "{://g}", str);
  |                         ^^^^^^^^

error: missing '/' to end regex:
       At "{:/}"
             ^^
 --> tests/fail/stable/invalid_custom_regex.rs:3:25
  |
3 |     sscanf::sscanf!("", "{:/}", str);
  |                         ^^^^^^

error: missing '/' to end regex:
       At "{:/"
             ^
 --> tests/fail/stable/invalid_custom_regex.rs:4:25
  |
4 |     sscanf::sscanf!("", "{:/", str);
  |                         ^^^^^

error: unexpected end of regex:
       At r"{:/\"
               ^
 --> tests/fail/stable/invalid_custom_regex.rs:6:25
  |
6 |     sscanf::sscanf!("", r"{:/\", str);
  |                         ^^^^^^^

error: unexpected end of regex:
       At "{:/\\"
              ^^
 --> tests/fail/stable/invalid_custom_regex.rs:7:25
  |
7 |     sscanf::sscanf!("", "{:/\\", str);
  |                         ^^^^^^^

error: missing '/' to end regex:
       At r"{:/\/"
              ^^^
 --> tests/fail/stable/invalid_custom_regex.rs:8:25
  |
8 |     sscanf::sscanf!("", r"{:/\/", str);
  |                         ^^^^^^^^

error: missing '/' to end regex:
       At "{:/\\/"
             ^^^^
 --> tests/fail/stable/invalid_custom_regex.rs:9:25
  |
9 |     sscanf::sscanf!("", "{:/\\/", str);
  |                         ^^^^^^^^
